--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 .idea/vcs.xml
 .ipynb_checkpoints/DeepLab_test-checkpoint.ipynb
 test.JPG
+.ipynb_checkpoints/Hugging_Face_test-checkpoint.ipynb
+s13369-022-06608-9.pdf
