--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 test.JPG
 .ipynb_checkpoints/Hugging_Face_test-checkpoint.ipynb
 s13369-022-06608-9.pdf
+checkpoint/pspnet/pspnet_r50-d8_512x512_80k_ade20k_20200615_014128-15a8b914.pth
